refactor(elements): ino-selection style - add styling - add search icon in input

--- a/packages/elements/src/components/ino-selection/ino-selection.scss
+++ b/packages/elements/src/components/ino-selection/ino-selection.scss
@@ -1,21 +1,70 @@
-.popover-content {
-    padding: 0.5rem;
-    width: 250px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+@use '../base/new-theme' as new-theme;
 
-    & .optionList {
+$border-styling: 1px solid new-theme.$n-2;
+$padding-vertical: 1.3rem; //top & bottom
+$padding-horizontal: 1.5rem; // right & left
+
+$padding-layout: $padding-vertical $padding-horizontal;
+$padding-list-item: 0.7rem $padding-horizontal;
+
+ino-selection {
+    .popover-content {
+        padding: 0;
+        display: flex;
+        width: 20rem;
+        max-height: 20rem;
+        min-height: 11.5rem;
+        flex-direction: column;
+        justify-content: space-between;
+        border-radius: 1.21429rem;
+        background: #FFF !important; // new ino-popover & ino-tooltp design takes care of this design issue
+        box-shadow: 0px 0px 22px 0px rgba(93, 91, 105, 0.35);
+
+    }
+
+    .popover-content header {
+        padding: $padding-layout;
+        border-bottom: $border-styling;
+    }
+
+    .popover-content .ino-selection__list {
+        list-style-type: none;
         overflow: scroll;
         height: 100%;
-        margin: 10px 0;
+        margin: 0;
+        padding: 0;
     }
 
-    & footer {
-       border-top: 1px solid black;
+    .popover-content .ino-selection__list-item {
+        font-size: 0.85rem;
+        padding: $padding-list-item;
+
+        &--selected, &:hover {
+            background-color: new-theme.$p-1;
+            color: new-theme.$black;
+        }
+    
+        &--highlight {
+            color: new-theme.$p-7;
+            background-color: transparent;
+            font-weight: bold;
+        }
+    
+        &--no-match {
+            color: new-theme.$n-5;
+            pointer-events: none;
+        }
     }
+
+    .popover-content footer {
+        // padding will be decreased by the addOptionButton padding to achive visual alignment with remaining padding
+        padding: ($padding-vertical - 0.571rem) ($padding-horizontal - 0.571rem);
+        border-top: $border-styling;
+    }
+
+    .popover-content .ino-input--font-grey {
+        --ino-input-color: #{new-theme.$n-5};
+      }
 }
-
 
 
