--- a/packages/landingpage/components/getting-started/layout.module.scss
+++ b/packages/landingpage/components/getting-started/layout.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: minmax(400px, 960px) 1fr;
+  padding-bottom: 20px;
 
   .content {
     grid-row: 1;
@@ -16,12 +17,15 @@
   table {
     border-collapse: collapse;
     width: 100%;
+    box-shadow: 1px 1px 7px var(--inovex-elements-n-2);
+    border-radius: 6px 6px 0 0;
+    margin-bottom: 20px;
   }
 
   th {
     background-color: var(--inovex-elements-p-1);
     text-align: left;
-    padding: 8px;
+    padding: 12px;
     &:first-child {
       border-top-left-radius: 6px;
     }
@@ -31,21 +35,31 @@
   }
 
   td {
-    border: 1px solid var(--inovex-elements-n-1);
-    padding: 8px;
+    //border: 1px solid var(--inovex-elements-n-1);
+    padding: 17px 12px;
+    &:first-child {
+      border-top-left-radius: 6px;
+    }
+    &:last-child {
+      border-top-right-radius: 6px;
+    }
   }
 
   tr:nth-child(even) {
     background-color: var(--inovex-elements-p-1);
   }
-}
 
-.sandbox {
-  width: 100%;
-  height: 700px;
-  border: 0;
-  border-radius: 4px;
-  overflow: hidden;
+  p code {
+    color: var(--inovex-elements-p-9);
+    font-weight: bold;
+    font-size: 0.9rem;
+    padding: 0 0.4rem;
+    margin: 0 0.2rem;
+    border-radius: 4px;
+    display: inline-block;
+    background-color: var(--inovex-elements-n-1);
+    box-shadow: 1px 1px 2px  var(--inovex-elements-n-2);
+  }
 }
 
 .segmentGroup {
