--- a/packages/landingpage/components/getting-started/layout.module.scss
+++ b/packages/landingpage/components/getting-started/layout.module.scss
@@ -61,9 +61,8 @@
 }
 
 .sandboxImageContainer {
+  display: block;
   position: relative;
-  width: 100%;
-  height: auto;
   cursor: pointer;
   overflow: hidden;
   border-radius: 4px;
