--- a/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
+++ b/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
@@ -259,7 +259,7 @@
 
   .visually-hidden {
     position: absolute;
-    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
     padding: 0;
     border: 0;
     height: 1px;
