--- a/packages/landingpage/components/layout/footer/footer.module.scss
+++ b/packages/landingpage/components/layout/footer/footer.module.scss
@@ -2,41 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 150px;
+  row-gap: 100px;
   margin-bottom: 120px;
+  background-color: var(--inovex-elements-n-1);
+  border-radius: 25px;
+  padding: 25px;
 
-  @media only screen and (max-width: 700px) {
-    row-gap: 4rem;
-  }
-}
-
-.sublinks {
-  width: 100%;
-  max-width: 1400px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 28px;
-
-  @media only screen and (max-width: 920px) {
-    &::after {
-      content: "";
-      flex: auto;
-    }
-  }
-}
-
-.col {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1.2rem;
-  min-width: 10rem;
-}
-
-.empty {
-  height: 0;
-
-  @media only screen and (max-width: 700px) {
-    display: none;
+  @media only screen and (max-width: 599px) {
+    align-items: stretch;
+    padding: 0;
   }
 }
