--- a/packages/landingpage/components/layout/attributions.module.scss
+++ b/packages/landingpage/components/layout/attributions.module.scss
@@ -2,6 +2,8 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid var(--inovex-elements-n-3);
+  padding-top: 1rem;
 }
 
 .company {
@@ -13,5 +15,5 @@
   display: flex;
   align-items: center;
   column-gap: 10px;
-  color: var(--inovex-elements-n-7) !important;
+  color: var(--inovex-elements-n-8) !important;
 }
