--- a/packages/storybook/src/stories/ino-selection/ino-selection.scss
+++ b/packages/storybook/src/stories/ino-selection/ino-selection.scss
@@ -1,7 +1,13 @@
 .story-ino-selection{
     height: 400px;
     display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
     gap: 5px;
+
+    &:has(#ino-selection-placement){
+        align-items: flex-end;
+    }
 }
 
 #create-option-dialog {
