--- a/packages/landingpage/components/getting-started/layout.module.scss
+++ b/packages/landingpage/components/getting-started/layout.module.scss
@@ -66,3 +66,35 @@
   justify-content: center;
   margin: 5px;
 }
+
+.sandboxImageContainer {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 4px;
+
+  &:hover .sandboxImage {
+    filter: blur(3px);
+  }
+
+  &:hover .overlayButton {
+    opacity: 1;
+  }
+}
+
+.sandboxImage {
+  width: 100%;
+  height: 100%;
+  transition: filter 300ms;
+}
+
+.overlayButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 300ms;
+}
