--- a/packages/landingpage/components/layout/attributions.module.scss
+++ b/packages/landingpage/components/layout/attributions.module.scss
@@ -17,5 +17,5 @@
   display: flex;
   align-items: center;
   column-gap: 10px;
-  color: var(--inovex-elements-n-10) !important;
+  color: white !important;
 }
