--- a/packages/landingpage/components/layout/footer/desktop/footer.desktop.module.scss
+++ b/packages/landingpage/components/layout/footer/desktop/footer.desktop.module.scss
@@ -1,33 +1,56 @@
 .sublinks {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    column-gap: 6rem;
-    row-gap: 2rem;
-    padding: 3rem 0;
-  
-    @media only screen and (max-width: 1200px) {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  
-    @media only screen and (max-width: 850px) {
-      grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 6rem;
+  row-gap: 2rem;
+  padding: 3rem 0;
+
+  @media only screen and (max-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media only screen and (max-width: 850px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+
+  .mainRouteName,
+  .subRouteName {
+    color: white;
+
+    &:hover {
+      color: white; // cover up the default <LinkItem> hover color
     }
   }
-  
-  .col {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.5rem;
-    .mainRouteName {
-      color: var(--inovex-elements-n-10);
-      font-size: 1.2rem;
-      padding-bottom: 1rem;
-      white-space: nowrap;
+
+  .mainRouteName {
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+    white-space: nowrap;
+  }
+
+  .subRouteName {
+    position: relative;
+    overflow: hidden;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background-color: white;
+      transition: width 0.2s;
     }
-  
-    .subRouteName {
-      color: var(--inovex-elements-n-9);
-      font-size: smaller;
+
+    &:hover::before {
+      width: 100%;
     }
   }
-  
+}
