--- a/packages/elements/src/components/ino-popover/ino-popover.scss
+++ b/packages/elements/src/components/ino-popover/ino-popover.scss
@@ -1,15 +1,6 @@
 // ino-popover & ino-tooltip use the same base-design
 @use '../base/tooltip-base';
 
-ino-popover {
-    header {
-        font-weight: bold;
-        margin-bottom: 0.5rem;;
-    }
-}
-
-ino-popover:has(header) {
-    .tippy-box {
-        padding: 0.5rem;
-    }
+.tippy-content {
+  padding: 0;
 }
