--- a/packages/elements/src/components/ino-popover/ino-popover.scss
+++ b/packages/elements/src/components/ino-popover/ino-popover.scss
@@ -1,23 +1,6 @@
-@use '../base/mdc-customize';
-@use '../ino-tooltip/mixins' as tooltip-mixins;
-@use '../base/theme';
-@import '~tippy.js/animations/scale-subtle.css';
+// ino-popover & ino-tooltip use the same base-design
+@use '../base/tooltip-base';
 
-$color-schemes: 'primary', 'secondary', 'light';
-
-.ino-popover > * {
-  border-radius: 6px;
-}
-
-@each $color in $color-schemes {
-  .ino-popover.ino-popover--color-scheme-#{$color} > * {
-    @include tooltip-mixins.tooltip(
-      theme.color($color, light),
-      theme.color($color, contrast)
-    );
-  }
-}
-
-.ino-popover.ino-popover--color-scheme-transparent > * {
-  @include tooltip-mixins.tooltip(#fff, theme.color(dark));
+.tippy-content {
+  padding: 0;
 }
