--- a/packages/elements/src/components/ino-selection/ino-selection.scss
+++ b/packages/elements/src/components/ino-selection/ino-selection.scss
@@ -19,6 +19,7 @@ ino-selection {
     border-radius: 1.21429rem;
     background: #fff !important; // new ino-popover & ino-tooltp design takes care of this design issue
     box-shadow: 0px 0px 22px 0px rgba(93, 91, 105, 0.35);
+    overflow: hidden;
   }
 
   .popover-content header {
