--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -40,7 +40,7 @@
   position: relative;
 
   &--interactive {
-     // border width transition
+    // border width transition
     .ino-avatar__border path,
     .ino-avatar__border circle {
       stroke-width: 2%;
@@ -54,11 +54,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(
-        0deg,
-        rgba(190, 204, 255, 0) 0%,
-        rgba(190, 204, 255, 0.76) 100%
-      );
+      background: rgba(76, 105, 201, 0.2);
       border-radius: 50%;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
@@ -81,6 +77,26 @@
       .ino-avatar__border {
         transform: rotate(60deg);
       }
+    }
+  }
+
+  &__icon-slot {
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    width: calc(var(--avatar-size) * 0.26);
+    height: calc(var(--avatar-size) * 0.26);
+    bottom: 0;
+    right: 0;
+    box-shadow: 0px 0px 15px -10px theme.$p-5;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    ino-icon {
+      --ino-icon-height: calc(var(--avatar-size) * 0.18);
+      --ino-icon-width: calc(var(--avatar-size) * 0.18);
     }
   }
 }
