refactor: use statically-imported SVGs in ino-avatar component

--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -140,6 +140,10 @@
   transform: rotate(0deg);
   transition: transform 250ms ease-in-out;
 
+  svg {
+    overflow: visible;
+  }
+
   path,
   circle {
     stroke-width: 2%;
