--- a/packages/elements/src/components/ino-option/ino-option.scss
+++ b/packages/elements/src/components/ino-option/ino-option.scss
@@ -1,11 +1,14 @@
 @use '../base/mdc-customize';
 @use "@material/list";
-@use '../base/theme';
+@use '../base/new-theme' as theme;
 
 @include list.deprecated-core-styles;
 
+$height: auto;
+
 ino-option {
   /**
+   * @prop --ino-option-height: Height of the option container
    * @prop --ino-option-selected-background-color: Background color if selected
    * @prop --ino-option-selected-background-color-hover: Background color on hover if selected
    * @prop --ino-option-selected-background-color-focus: Background color on focus if selected
@@ -15,21 +18,25 @@ ino-option {
    * @prop --ino-option-deselected-background-color-focus: Background color on focus if deselected
    * @prop --ino-option-deselected-background-color-active: Background color if active and deselected
    */
+  --height: var(
+    --ino-option-height,
+    #{$height}
+  );
   --option-selected-background-color: var(
     --ino-option-selected-background-color,
-    #{rgba(theme.color(primary, base), 0.05)}
+    #{theme.$p-1}
   );
   --option-selected-background-color-hover: var(
     --ino-option-selected-background-color-hover,
-    #{rgba(theme.color(primary, base), 0.1)}
+    #{theme.$p-2}
   );
   --option-selected-background-color-focus: var(
     --ino-option-selected-background-color-focus,
-    #{rgba(theme.color(primary, base), 0.15)}
+    #{theme.$p-3}
   );
   --option-selected-background-color-active: var(
     --ino-option-selected-background-color-active,
-    #{rgba(theme.color(primary, base), 0.3)}
+    #{theme.$p-3}
   );
   // the following CSS variables do not have a default value as the component uses the default colors set
   // by the MDC library if the value of the variable is empty
@@ -38,15 +45,15 @@ ino-option {
   );
   --option-deselected-background-color-hover: var(
     --ino-option-deselected-background-color-hover,
-    #{rgba(black, 0.1)}
+    #{theme.$n-1}
   );
   --option-deselected-background-color-focus: var(
     --ino-option-deselected-background-color-focus,
-    #{rgba(black, 0.15)}
+    #{theme.$n-2}
   );
   --option-deselected-background-color-active: var(
     --ino-option-deselected-background-color-active,
-    #{rgba(black, 0.3)}
+    #{theme.$n-3}
   );
 }
 
@@ -58,9 +65,9 @@ ino-option {
   }
 
   .mdc-deprecated-list-item {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    height: auto;
+    // padding-top: 6px;
+    // padding-bottom: 6px;
+    height: var(--height);
 
     background-color: var(--option-deselected-background-color);
 
