refactor: add aria img role and alt text

--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -60,22 +60,27 @@
       transition: opacity 0.3s ease-in-out;
     }
 
-    &.ino-avatar--solid:hover,
-    &.ino-avatar--dashed:hover {
-      .ino-avatar__border path,
-      .ino-avatar__border circle {
-        stroke-width: 4%;
-      }
+    &.ino-avatar--solid,
+    &.ino-avatar--dashed {
+      &:hover,
+      &:focus {
+        .ino-avatar__border path,
+        .ino-avatar__border circle {
+          stroke-width: 4%;
+        }
 
-      .ino-avatar__image-inner::after {
-        opacity: 1;
+        .ino-avatar__image-inner::after {
+          opacity: 1;
+        }
       }
     }
 
-    // rotate dashed border
-    &.ino-avatar--dashed:hover {
-      .ino-avatar__border {
-        transform: rotate(60deg);
+    &.ino-avatar--dashed {
+      &:hover,
+      &:focus {
+        .ino-avatar__border {
+          transform: rotate(60deg);
+        }
       }
     }
   }
