refactor: add pointing cursor and improve prop description

--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -40,6 +40,8 @@
   position: relative;
 
   &--interactive {
+    cursor: pointer;
+
     // border width transition
     .ino-avatar__border path,
     .ino-avatar__border circle {
