style(elements|ino-select): no-match same as result-item

--- a/packages/elements/src/components/ino-autocomplete/ino-autocomplete.scss
+++ b/packages/elements/src/components/ino-autocomplete/ino-autocomplete.scss
@@ -56,6 +56,9 @@ $height: 2.85rem;
   }
 
   &--no-match {
+    padding: 0 0 0 16px;
+    display: flex;
+    align-items: center;
     color: theme.$n-5;
     pointer-events: none;
   }
