--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -8,19 +8,18 @@
 */
 
 // specific styles for the markdown editor dialog window that opens when having text selected and clicking the "create link" button
-[data-ino-dialog-section] {
+.ino-dialog-section {
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
 }
 
-[data-ino-dialog-input] {
-  width: 100%;
+.ino-dialog-delete ino-icon {
+  --ino-icon-button-icon-color: #{new_theme.$error};
 }
 
-[data-ino-dialog-delete] > .button {
-  color: new_theme.$error;
-  border-color: new_theme.$error;
+.ino-dialog-form {
+  width: 100%;
 }
 
 // general styles
