fix(landingpage): fix css import

--- a/packages/landingpage/styles/globals.css
+++ b/packages/landingpage/styles/globals.css
@@ -1,4 +1,5 @@
 @import '@inovex.de/elements/dist/inovex-elements/inovex-elements.css';
+@import '@inovex.de/ui-patterns/dist/styles.css';
 @import './guide.css';
 
 html,
