--- a/packages/landingpage/components/layout/attributions.module.scss
+++ b/packages/landingpage/components/layout/attributions.module.scss
@@ -8,9 +8,15 @@
   flex-wrap: wrap;
 }
 
+.column-layout {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
+
 .company {
   display: flex;
-  gap: 5px
+  gap: 5px;
 }
 
 .attribution {
