style(elements|ino-tooltip): update design & add title (#975)
Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/packages/storybook/src/stories/ino-tooltip/ino-tooltip.scss
+++ b/packages/storybook/src/stories/ino-tooltip/ino-tooltip.scss
@@ -1,6 +1,8 @@
 .story-tooltip {
   display: flex;
   justify-content: center;
+  align-items: flex-end;
+  height: 110px;
 
   h4 {
     margin-top: 48px;
