--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -29,16 +29,6 @@
   }
 }
 
-@keyframes strokePulse {
-  0%,
-  100% {
-    stroke-width: 2%;
-  }
-  50% {
-    stroke-width: 4%;
-  }
-}
-
 .ino-avatar {
   --avatar-size: var(--ino-avatar-size, 138px);
   @include flex-center;
@@ -138,7 +128,7 @@
     background: theme.$p-2;
   }
 
-  .loading-wrapper {
+  .skeleton-loader {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -146,33 +136,36 @@
     border-radius: 50%;
     height: 100%;
     width: 100%;
-    background: #FFF;
+    background-color: #dddbdd;
+    overflow: hidden;
 
     z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    .loader {
-      width: calc(
-        var(--avatar-size) * (48 / 138)
-      ); // loaders width as a proportion of the avatar size
-      height: calc(var(--avatar-size) * (48 / 138));
-      border: calc(var(--avatar-size) * (5 / 138)) solid #fff;
-      border-bottom-color: theme.$primary;
-      border-radius: 50%;
-      display: inline-block;
-      box-sizing: border-box;
-      animation: spinner 1s linear infinite;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: translateX(-100%);
+      background-image: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0,
+        rgba(255, 255, 255, 0.2) 20%,
+        rgba(255, 255, 255, 0.5) 60%,
+        rgba(255, 255, 255, 0)
+      );
+      animation: shimmer 5s infinite;
     }
+  }
 
-    @keyframes spinner {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
+  @keyframes shimmer {
+    100% {
+      transform: translateX(100%);
     }
   }
 }
@@ -211,7 +204,7 @@
     transition: stroke-width 0.3s ease-in-out;
 
     .ino-avatar--loading & {
-      animation: strokePulse 2s infinite;
+      stroke: #dddbdd;
     }
   }
 }
