--- a/packages/elements/src/components/ino-avatar/ino-avatar.scss
+++ b/packages/elements/src/components/ino-avatar/ino-avatar.scss
@@ -122,9 +122,51 @@
   border-radius: 50%;
   box-sizing: border-box;
   position: relative;
+  justify-content: center;
 
   &.initials {
     background: theme.$p-2;
+  }
+
+  .skeleton-loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    background-color: #dddbdd;
+    overflow: hidden;
+
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: translateX(-100%);
+      background-image: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0,
+        rgba(255, 255, 255, 0.2) 20%,
+        rgba(255, 255, 255, 0.5) 60%,
+        rgba(255, 255, 255, 0)
+      );
+      animation: shimmer 5s infinite;
+    }
+  }
+
+  @keyframes shimmer {
+    100% {
+      transform: translateX(100%);
+    }
   }
 }
 
@@ -160,5 +202,9 @@
   circle {
     stroke-width: 2%;
     transition: stroke-width 0.3s ease-in-out;
+
+    .ino-avatar--loading & {
+      stroke: #dddbdd;
+    }
   }
 }
