--- a/packages/elements/src/components/ino-option/ino-option.scss
+++ b/packages/elements/src/components/ino-option/ino-option.scss
@@ -1,11 +1,15 @@
 @use '../base/mdc-customize';
 @use '@material/list';
-@use '../base/theme';
+@use '../base/new-theme' as theme;
+@use '../base/option-base' as base;
 
 @include list.deprecated-core-styles;
 
+$height: 2.85rem;
+
 ino-option {
   /**
+   * @prop --ino-option-height: Height of the option container
    * @prop --ino-option-selected-background-color: Background color if selected
    * @prop --ino-option-selected-background-color-hover: Background color on hover if selected
    * @prop --ino-option-selected-background-color-focus: Background color on focus if selected
@@ -15,87 +19,68 @@ ino-option {
    * @prop --ino-option-deselected-background-color-focus: Background color on focus if deselected
    * @prop --ino-option-deselected-background-color-active: Background color if active and deselected
    */
+  --height: var(--ino-option-height, #{$height});
   --option-selected-background-color: var(
     --ino-option-selected-background-color,
-    #{rgba(theme.color(primary, base), 0.05)}
+    #{base.$OPTION-SELECTED-BG-COLOR}
   );
   --option-selected-background-color-hover: var(
     --ino-option-selected-background-color-hover,
-    #{rgba(theme.color(primary, base), 0.1)}
+    #{base.$OPTION-SELECTED-BG-COLOR-HOVER}
   );
   --option-selected-background-color-focus: var(
     --ino-option-selected-background-color-focus,
-    #{rgba(theme.color(primary, base), 0.15)}
+    #{base.$OPTION-SELECTED-BG-COLOR-HOVER}
   );
   --option-selected-background-color-active: var(
     --ino-option-selected-background-color-active,
-    #{rgba(theme.color(primary, base), 0.3)}
+    #{base.$OPTION-SELECTED-BG-COLOR-ACTIVE}
   );
   // the following CSS variables do not have a default value as the component uses the default colors set
   // by the MDC library if the value of the variable is empty
   --option-deselected-background-color: var(
-    --ino-option-deselected-background-color
+    --ino-option-deselected-background-color,
+    #{base.$OPTION-DESELECTED-BG-COLOR}
   );
   --option-deselected-background-color-hover: var(
     --ino-option-deselected-background-color-hover,
-    #{rgba(black, 0.1)}
+    #{base.$OPTION-DESELECTED-BG-COLOR-HOVER}
   );
   --option-deselected-background-color-focus: var(
     --ino-option-deselected-background-color-focus,
-    #{rgba(black, 0.15)}
+    #{base.$OPTION-DESELECTED-BG-COLOR-HOVER}
   );
   --option-deselected-background-color-active: var(
     --ino-option-deselected-background-color-active,
-    #{rgba(black, 0.3)}
+    #{base.$OPTION-DESELECTED-BG-COLOR}
   );
 }
 
 ino-option {
   @include list.deprecated-item-disabled-text-opacity(0.5);
 
-  .mdc-deprecated-list-item--disabled {
-    pointer-events: none;
-  }
-
   .mdc-deprecated-list-item {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    height: auto;
+    height: var(--height);
 
-    background-color: var(--option-deselected-background-color);
-
-    &:hover {
-      background-color: var(--option-deselected-background-color-hover);
-    }
-
-    &:focus {
-      background-color: var(--option-deselected-background-color-focus);
-    }
-
-    &:active {
-      background-color: var(--option-deselected-background-color-active);
-    }
+    @include base.style-mdc-list-item-deselected-states(
+      var(--option-deselected-background-color),
+      var(--option-deselected-background-color-hover),
+      var(--option-deselected-background-color-focus),
+      var(--option-deselected-background-color-active)
+    );
 
     &.mdc-deprecated-list-item--selected,
     &.mdc-deprecated-list-item--activated {
-      background-color: var(--option-selected-background-color);
-
-      &::before,
-      &::after {
-        display: none;
-      }
-
-      &:hover {
-        background-color: var(--option-selected-background-color-hover);
-      }
-
-      &:focus {
-        background-color: var(--option-selected-background-color-focus);
-      }
-
-      &:active {
-        background-color: var(--option-selected-background-color-active);
-      }
+      @include base.style-mdc-list-item-selected-states(
+        var(--option-selected-background-color),
+        var(--option-selected-background-color-hover),
+        var(--option-selected-background-color-focus),
+        var(--option-selected-background-color-active)
+      );
     }
+  }
+
+  .mdc-deprecated-list-item--disabled {
+    pointer-events: none;
   }
 }
