--- a/packages/elements/src/global/styles.scss
+++ b/packages/elements/src/global/styles.scss
@@ -144,13 +144,7 @@
 
 // Dark Theme Variables
 .inovex-elements-theme-dark {
-  --inovex-elements-white: #{dark-theme.$white};
-  --inovex-elements-black: #{dark-theme.$black};
-  --inovex-elements-transparent: #{dark-theme.$transparent};
-
-  // Neutrals dark theme colors
-  --inovex-elements-n-1: #{dark-theme.$n-1};
-  --inovex-elements-n-2: #{dark-theme.$n-2};
+  --inovex-elements-p-1: #48ec4a;
   // ...
 
   /*
